説明メッセージ

--- a/index.html
+++ b/index.html
@@ -2186,7 +2186,7 @@ font-family: "Yuji Syuku";
 
 <body class="home page-template page-template-kadence-child page-template-page-video-template page-template-kadence-childpage-video-template-php page page-id-537 wp-embed-responsive footer-on-bottom hide-focus-outline link-style-no-underline content-title-style-hide content-width-normal content-style-boxed content-vertical-padding-show non-transparent-header mobile-non-transparent-header">
 <div id="wrapper" class="site wp-site-blocks">
-			<a class="skip-link screen-reader-text scroll-ignore" href="#main">内容をスキップ</a>
+			<a class="skip-link screen-reader-text scroll-ignore" href="\ibaraki-prefecture-kyudo-federation-homepage">内容をスキップ</a>
 		<header id="masthead" class="site-header" role="banner" itemtype="https://schema.org/WPHeader" itemscope>
 	<div id="main-header" class="site-header-wrap">
 		<div class="site-header-inner-wrap">
