説明メッセージ

--- a/ibaraki-prefecture-kyudo-federation-homepage/index.html
+++ b/ibaraki-prefecture-kyudo-federation-homepage/index.html
@@ -2270,7 +2270,7 @@ font-family: "Yuji Syuku";
   <div class="p-fv__back p-fv__back-left"></div>
   <div class="p-fv__back p-fv__back-right"></div>
   <div class="p-fv__mainContens">
-    <img decoding="async" class="p-fv__img" src="C:\Users\sakis\Local Sites\ibaraki-kyudo\app\public\サイトアップ\wp-content\uploads\2025\03\黒と赤-スタートアップ-シンプル-テック-アニメーションプレゼンテーション.png">
+    <img decoding="async" class="p-fv__img" src="\サイトアップ\wp-content\uploads\2025\03\黒と赤-スタートアップ-シンプル-テック-アニメーションプレゼンテーション.png">
     <div class="p-fv__text-box">
       <h1 class="p-fv__title">伝統の矢</h1>
       <h2 class="p-fv__subtext">茨城から未来へ。</h2>
